# FasTensor

./: AUTHORS  CopyrightLicenseAgreement  INSTALL.ArrayUDF  Makefile  Makefile.am  Makefile.in  README  README.md  README.md.backup  aclocal.m4  autogen.sh  config-py.sh  config.h  config.h.in  config.status  configure  configure.ac  cp-svn.sh  dassa-commit-id  first-release-version  gitpush  libtool  license.txt  ltmain.sh  run-conf-perl  set-cori.sh
examples/: DasLib.h  DasLib3rd.h  Makefile  Makefile.am  Makefile.backup  Makefile.in  au_example.cpp  au_example_1f1p.cpp  au_example_adios.cpp  au_example_array.cpp  au_example_basic.cpp  au_example_cache.cpp  au_example_chunk_overlap.cpp  au_example_filter.cpp  au_example_hello_world.cpp  au_example_kf1p.cpp  au_example_padding.cpp  au_example_pnetcdf.cpp  au_example_reduce.cpp  au_example_reduce2D_1f1p.cpp  au_example_simple.cpp  au_example_skip.cpp  au_example_stack.cpp  au_example_tag.cpp  au_example_vds.cpp  au_example_vector.cpp  au_example_vector_2d.cpp  au_test_data_generator.cpp  ccl-pc-new  ccl-pc-new.cpp  ccl-test-debug.sh  conv  conv-2d.cpp  conv.cpp  cscope.out  example_padding.cpp  examples  fake-HDF5-data.c  ft_example_1f1p.cpp  ft_example_adios.cpp  (+40 more)
examples/.deps/: au_example_1f1p.Po  au_example_adios.Po  au_example_array.Po  au_example_cache.Po  au_example_chunk_overlap.Po  au_example_hello_world.Po  au_example_kf1p.Po  au_example_padding.Po  au_example_pnetcdf.Po  au_example_reduce.Po  au_example_reduce2D_1f1p.Po  au_example_simple.Po  au_example_tag.Po  au_example_vds.Po  au_example_vector.Po  au_example_vector_2d.Po  au_test_data_generator.Po  ccl-pc-new.Po  ccl-pc.Po  ccl-sq-new.Po  ccl-sq.Po  conv.Po  fake-HDF5-data.Po  hist.Po  inter-xyz.Po  inter.Po  udf-example-new.Po  udf-example.Po  udf-test.Po
examples/das/: Makefile  Makefile.snowbear  das-correlation.cpp  das-fft-full-omp.cpp  das-fft-full.config  das-fft-full.cpp  das-fft-test.cc  das-fft.cpp  das-fft.cpp.before.improve  das-fft.h  dsi2h5.m  h5-merge.py  h5-vds-merge.c  h5-vs-merge.c  plot.py  tdms2h5.c  tdms2h5.py  usage.example
examples/dassa/: DasLib.h  DasLib3rd.cpp  DasLib_filtfilt.h  Makefile  Readme  au_example_stack.cpp  das-fft-full-omp.cpp  dsi2h5.m  dsi2h5group.m  tdms2h5.c
examples/old-code/: Makefile  Makefile.in  any-eample.cpp  ccl-pc-new.cpp  ccl-pc.cpp  ccl-sq.cpp  ccl-test.sh  conv-2d.cpp  conv-micro-test.cpp  conv.cpp  inter-xyz.cpp.backup-full-inter  inter.cpp  test.sh  udf-example-new.cpp  udf-example.cpp
examples/old-examples/: ccl-pc  ccl-sq-new.cpp  udf-bx.cpp  udf-neon.cpp  udf-s1.cpp  udf-s3d.cpp  vpic-xyz-global-position.cpp.backup
examples/result/: labels-count  lables-on-edison  result-on-edison
examples/spmv/: Makefile  create_data.cpp  create_data_3d.cpp  spmv-hpcg-3d-read-cache.cpp  spmv-hpcg-3d-read.cpp  spmv-hpcg-3d.cpp  spmv-stencil.cpp  spmv-v2.cpp  spmv.cpp
examples/test-data/: cmpd.h5  testf-16-reduce.h5  testf-16x16-array.h5  testf-16x16-cache-intermediate.h5  testf-16x16-cache-output.h5  testf-16x16-chunk-overlap-output.h5  testf-16x16-chunk-overlap.h5  testf-16x16-hello-world-int.h5.xdmf  testf-16x16-hello-world-output.h5  testf-16x16-hello-world.h5  testf-16x16-hello-world.h5.xdmf  testf-16x16-tag-output.h5  testf-16x16-tag.h5  testf-16x16-vds-output.h5  testf-16x16-vds.h5  testf-16x16-vector-2d-output.h5  testf-16x16-vector-2d.h5  testf-16x16-vector-output.h5  testf-16x16-vector.h5
examples/test-data-good/: testf-16x16-array.h5  testf-16x16-cache-intermediate.h5  testf-16x16-cache-output.h5  testf-16x16-hello-world-output.h5  testf-16x16-tag-output.h5  testf-16x16-vds-output.h5  testf-16x16-vds.h5  testf-16x16-vector-2d-output.h5  testf-16x16-vector-output.h5  testf-16x16-vector.h5
examples/vpic/: field-element-wise-op.cpp  mag-field.cpp  parallel-eb-at-particle.cpp  particle-global-xyz.cpp  particle-interpolation.cpp  readme
examples/vpic-gradient-inter/: Makefile  absJ.cpp  element-wise.cpp  fields_50.h5  global-xyz.cpp  hydro_electron_50.h5  hydro_ion_50.h5  output.xdml  parallel-eb-at-particle.cpp  particle-global-xyz.cpp  particles-interpolation.cpp  vpic-xyz-global-position.cpp
examples/vpic-pl/: vpic-xyz-global-position.sh
examples/vpic2/: Makefile  particle-binning.cpp  particle-filter  particle-filter.cpp
ftstream/: README.md  configure.ac
ftstream/src/: Makefile.am  cmdline.h  dataset_types.cpp  dataset_types.h  dataset_utils.cpp  dataset_utils.h  fastflush.cpp  fastflush.h  fsutils.h  ft_stream_gen.cpp  hdf5_utils.h
src/: Makefile  Makefile.am  Makefile.in  array_udf.h  array_udf_array.h  array_udf_array.h.backup-openmp  array_udf_attribute.h  array_udf_ga.h  array_udf_h5.h  array_udf_iarray.h  array_udf_io.h  array_udf_io_backup.h  array_udf_stencil.h  au.cpp  au.h  au_array.cpp  au_array.h  au_array_iterator.cpp  au_array_iterator.h  au_array_transpose.h  au_array_view_access.cpp  au_array_view_access.h  au_attribute.h  au_chunk.cpp  au_chunk.h  au_endpoint.cpp  au_endpoint.h  au_endpoint_adios.cpp  au_endpoint_adios.h  au_endpoint_binary.cpp  au_endpoint_binary.h  au_endpoint_dir.cpp  au_endpoint_dir.h  au_endpoint_factory.h  au_endpoint_hdf5.cpp  au_endpoint_hdf5.h  au_endpoint_memory.cpp  au_endpoint_memory.h  au_endpoint_pnetcdf.cpp  au_endpoint_pnetcdf.h  (+74 more)
src/.deps/: au_array.Plo  au_array_iterator.Plo  au_array_view_access.Plo  au_endpoint.Plo  au_endpoint_adios.Plo  au_endpoint_binary.Plo  au_endpoint_dir.Plo  au_endpoint_hdf5.Plo  au_endpoint_memory.Plo  au_endpoint_pnetcdf.Plo  au_endpoint_tdms.Plo  au_output_vector.Plo  au_type.Plo  au_utility.Plo  au_xdmf.Plo  ft.Plo
src/.libs/: libArrayUDF.la  libArrayUDF.lai
src/iarray/: Makefile  iarray-helper.h-backup-after-message-size-order  iarray-helper.h-backup-before-message-size-order
src/old-code/: ArrayUDF.i  ArrayUDF_wrap.cxx  Makefile  array_udf.h  array_udf_array.h.backup-openmp  array_udf_array_backup.h  array_udf_ga-int64.h  array_udf_ga.backup-64-gcc.h  array_udf_iarray.h  array_udf_io.h  array_udf_io.h.backup.before.iarray  au_array.h  au_endpoint.h  endpoint_hdf5.h  ga-makefile  ga-test  iarray.cpp  (+4 more)
(+681 files in other folders)
